# dioxus-heroicons

./: Cargo.toml  README.md
src/: outline.rs  solid.rs
