[package]
name = "dioxus-heroicons"
version = "0.1.4"
authors = ["Dave Rolsky <autarch@urth.org>"]
description = "Dioxus components for heroicons (https://heroicons.com/)"
repository = "https://github.com/houseabsolute/dioxus-heroicons"
readme = "README.md"
license = "Apache-2.0 OR MIT"
edition = "2018"

[dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus", rev="1e99e35572f6cf4f3ae09e1d0290b6e43838518d"  }
dioxus-html = { git = "https://github.com/DioxusLabs/dioxus", rev="1e99e35572f6cf4f3ae09e1d0290b6e43838518d"  }

[workspace]
members = ["gen"]

[workspace.metadata.release]
allow-branch = ["master"]
