[package]
name = "dioxus-heroicons"
version = "0.1.4"
authors = ["Dave Rolsky <autarch@urth.org>"]
description = "Dioxus components for heroicons (https://heroicons.com/)"
repository = "https://github.com/houseabsolute/dioxus-heroicons"
readme = "README.md"
license = "Apache-2.0 OR MIT"
edition = "2018"

[dependencies]
dioxus = { git="https://github.com/DioxusLabs/dioxus", rev = "4aac2cdae16faea2a7c24250d1d8465eeda1d26a"}
dioxus-html = { git="https://github.com/DioxusLabs/dioxus", rev = "4aac2cdae16faea2a7c24250d1d8465eeda1d26a" }

[workspace]
members = ["gen"]

[workspace.metadata.release]
allow-branch = ["master"]
